[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-protocol"
version = "0.1.0"
description = "Hive Civilization SDK — signed receipts, zero-knowledge proofs, six-gate outbound governance, and selective disclosure for autonomous-agent commerce."
readme = "README.md"
authors = [
    { name = "Hive Civilization", email = "sales@thehiveryiq.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["agent", "settlement", "zero-knowledge", "compliance", "audit", "x402", "stablecoin", "ed25519", "merkle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://thehiveryiq.com/sdk/"
Documentation = "https://thehiveryiq.com/canon/"
Repository = "https://github.com/thehivery/hive-py"
Patents = "https://thehiveryiq.com/canon/spectralzk/"

[project.scripts]
hive = "hive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
